# genzo-kits

./: .gitignore  Untitled-5  build.bat  index.html  memory.md  package-lock.json  package.json  run.bat  summary.md  tailwind.config.js  test.xml  test_parser.ts  vite.config.ts
docs/: 00-start-new-conversation.md  01-project-overview.md  02-features.md  03-editing-principles.md  04-current-code.md  05-workflow-new-feature.md  06-workflow-fix-bug.md  07-core-development-rules.md  08-workflow-test-application.md  ARCHITECTURE.md  COMPONENTS.md  FEATURES.md  USER_FLOWS.md
docs/superpowers/plans/: 2026-04-20-senior-overhaul-plan.md
docs/superpowers/specs/: 2026-04-20-senior-overhaul-design.md
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  search.rs  sql_parser.rs
src-tauri/src/modules/: base.rs  file_system.rs  folder_search.rs  mod.rs  network.rs  property_renamer.rs  session.rs
src-tauri/src/xml_filter/: filter.rs  mod.rs  parser.rs
src/components/: GlobalToast.tsx  StatusBar.tsx  configStore.ts  toastStore.ts  useEditorConfig.ts
src/config/: applyFontSize.ts  fontSizeTokens.ts
src/hooks/: useFileSystem.ts  useFontSize.ts  useMonacoManager.ts
src/store/: appStore.ts
src/tools/: index.ts
src/tools/folder-searcher/: FolderSearcher.tsx
src/tools/note-editor/: NoteEditor.tsx  store.ts  utils.ts
src/tools/property-renamer/: PropertyRenamer.tsx  index.ts  store.ts
src/tools/settings/: Settings.tsx  (+1 more)
tmp/: repro_bug.js  repro_bug_8.js  sqlite_regex_test.rs
(+44 files in other folders)
