[package]
name = "genzo-kit"
version = "1.0.0"
description = "A genzo kit with multiple tools"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
encoding_rs = "0.8.35"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-store = "2"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
directories = "6.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
walkdir = "2.5"
ignore = "0.4"
fuzzy-matcher = "0.3"
